fixing scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,18 @@
   font-family: 'Autography';
   src: url(./fonts/Autography.otf);
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffaa00;
+  border-radius: 5px;
+}
